feat: Implement comprehensive security controls and documentation
- Fix critical path traversal vulnerability in API endpoints
- Add secure file path validation with whitelist approach
- Implement rate limiting middleware for API protection
- Add comprehensive security headers (CSP, HSTS, XSS protection)
- Harden Docker configuration with non-root user execution
- Configure secure CORS policies for external access
- Add input validation and sanitization for all user inputs
- Create mandatory security requirements documentation
- Document security architecture and implementation guidelines
- Add security checklist and testing procedures

Security Controls Added:
- src/lib/security/pathValidation.ts - Secure file path validation
- src/lib/security/rateLimiting.ts - Rate limiting and input sanitization
- src/lib/security/index.ts - Security module exports
- src/pages/api/health.ts - Health check endpoint

Security Documentation:
- SECURITY-REQUIREMENTS.md - Mandatory security requirements
- docs/SECURITY-ARCHITECTURE.md - Technical security documentation
- docs/SECURITY-CHECKLIST.md - Development and testing procedures

Configuration Updates:
- next.config.js - Security headers and CSP configuration
- Dockerfile - Hardened container with non-root user
- docker-compose.yml - Security contexts and resource limits
- API endpoints updated with security middleware

All future development must comply with security requirements.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,43 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - .:/app
+      # Read-only application code mount (security)
+      - .:/app:ro
       - /app/node_modules
-      - ./org-files:/app/org-files
+      # Writable org-files directory with specific permissions
+      - ./org-files:/app/org-files:rw
+      # Temporary directory for secure operations
+      - /tmp/gtd-org-front:/tmp:rw
     environment:
       - NODE_ENV=development
       - WATCHPACK_POLLING=true
+      - ORG_WORK_DIR=/app/org-files/work
+      - ORG_HOME_DIR=/app/org-files/home
+    # Security context
+    user: "1001:1001"  # nextjs user from Dockerfile
+    read_only: false  # Need write access for temp files
+    cap_drop:
+      - ALL
+    cap_add:
+      - CHOWN
+      - DAC_OVERRIDE
+      - SETGID
+      - SETUID
+    security_opt:
+      - no-new-privileges:true
+    # Resource limits
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: '0.5'
+        reservations:
+          memory: 256M
+          cpus: '0.25'
+    # Health check
+    healthcheck:
+      test: ["CMD", "node", "-e", "require('http').get('http://localhost:3000/api/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1) })"]
+      interval: 30s
+      timeout: 3s
+      retries: 3
+      start_period: 10s
